--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h4>💘little coder💘</h4>
 
         <img 
-        src="anhNga"
+        src="anhNga.jpg"
         class="honey">
         
 
